--- a/public/assets/sass/style.css
+++ b/public/assets/sass/style.css
@@ -1997,4 +1997,52 @@ input[type="checkbox"]:checked:before {
 .checkbox-group label {
   margin: 0;
 }
+
+.banner {
+  background-color: rgba(255, 255, 255, 0.8);
+  position: fixed;
+  z-index: 1000;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 30px 20px;
+}
+
+.banner h4 {
+  margin: 10px;
+}
+
+.text-banner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.button-banner a.btn.btn-primary {
+  padding: 6px 10px;
+  font-size: 12px;
+  margin: 3px;
+  width: 295px;
+}
+
+.button-banner a:nth-child(2) {
+  background-color: #222831;
+}
 /*# sourceMappingURL=style.css.map */
