--- a/templates/include/header.html.twig
+++ b/templates/include/header.html.twig
@@ -5,18 +5,25 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html"><i class="icon-home"></i><span>Location</span>Immo</a></h1>
+					<h1 id="fh5co-logo"><a href="{{ path('home') }}"><i class="icon-home"></i><span>Location</span>Immo</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
-							<li class="active"><a href="{{ path('home') }}">Accueil</a></li>
+							<li class="{{ active == 'home' ? 'active' : '' }}"><a href="{{ path('home') }}">Accueil</a></li>
 							<li><a href="blog.html">Annonces</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li>
-								<a href="contact.html" class="fh5co-sub-ddown">Mon espace</a>
+							<li class="{{ active == 'myspace' ? 'active' : '' }}">
+								<a href="#" class="fh5co-sub-ddown">Mon espace</a>
 								<ul class="fh5co-sub-menu">
 									<li><a href="{{ path('app_register') }}">S'inscrire</a></li>
-									<li><a href="{{ path('app_login') }}">Se connecter</a></li>
+									{% if is_granted('ROLE_ADMIN') %}
+										<li><a href="{{ path('admin_home') }}">Administrateur</a></li>
+									{% endif %}
+									{% if is_granted('ROLE_USER') %}
+										<li><a href="{{ path('app_logout') }}">Se déconnecter&nbsp;<i class="icon-unlocked"></i></a></li>
+									{% else %}
+										<li><a href="{{ path('app_login') }}">Se connecter</a></li>
+									{% endif %}
 								</ul>
 							</li>
 						</ul>
