--- a/public/assets/sass/bootstrap/_mixins.scss
+++ b/public/assets/sass/bootstrap/_mixins.scss
@@ -1,5 +1,28 @@
 // Mixins
 // --------------------------------------------------
+/// Makes an element's :before pseudoelement a FontAwesome icon.
+/// @param {string} $content Optional content value to use.
+/// @param {string} $where Optional pseudoelement to target (before or after).
+@mixin icon($content: false, $where: before) {
+
+	text-decoration: none;
+
+	&:#{$where} {
+
+		@if $content {
+			content: $content;
+		}
+
+		-moz-osx-font-smoothing: grayscale;
+		-webkit-font-smoothing: antialiased;
+		font-family: FontAwesome;
+		font-style: normal;
+		font-weight: normal;
+		text-transform: none !important;
+
+	}
+
+}
 
 // Utilities
 @import "mixins/hide-text";
