--- a/public/assets/sass/style.css
+++ b/public/assets/sass/style.css
@@ -2039,6 +2039,22 @@ input[type="checkbox"]:checked:before {
   margin: 0;
 }
 
+#user_edit_roles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+#user_edit_roles > label {
+  margin-bottom: 0;
+  margin-right: 2rem;
+}
+
 .banner {
   background-color: rgba(255, 255, 255, 0.9);
   position: fixed;
