--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -18,7 +18,7 @@
                     <div class="row">
                       <div class="col-xs-12 col-md-3 aside-buttons">
                         <a href="{{ path('admin_useradmin_list') }}" class="btn btn-primary">Administrateurs</a>
-                        <a href="" class="btn btn-primary">Utilisateurs</a>
+                        <a href="{{ path('admin_user_list') }}" class="btn btn-primary">Utilisateurs</a>
                         <a href="" class="btn btn-primary">Documents</a>
                       </div>
                       <div class="col-12 col-md-9">
