--- a/templates/registration/userregister.html.twig
+++ b/templates/registration/userregister.html.twig
@@ -7,7 +7,7 @@
 	<aside id="fh5co-hero" class="js-fullheight">
 		<div class="flexslider js-fullheight">
 			<ul class="slides">
-				<li style="background-image: url({{asset('assets/images/properties/estate_01.jpg')}});">
+				<li style="background-image: url({{asset('assets/images/properties/home_04.jpg')}})">
 					<div class="overlay"></div>
 					<div class="container-fluid">
 						<div class="row">
