--- a/templates/main/home/index.html.twig
+++ b/templates/main/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil - LocationImmo{% endblock %}
+{% block title %}{% trans %}Home{% endtrans %} - LocationImmo{% endblock %}
 
 {% block body %}
 	<div id="fh5co-search-map">
