--- a/templates/registration/userregister.html.twig
+++ b/templates/registration/userregister.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon espace - LocationImmo
+{% block title %}{% trans %}My space{% endtrans %} - LocationImmo
 {% endblock %}
 
 {% block body %}
